--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -6,3 +6,8 @@
   href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
   rel="stylesheet"
 />
+
+<link
+  rel="stylesheet"
+  href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css"
+/>
